--- a/src/assets/Hero.css
+++ b/src/assets/Hero.css
@@ -91,11 +91,8 @@ ul {
     #fd1f1f
   );
 }
-.example-2 .icon-content a[data-social="youtube"] .filled,
-.example-2 .icon-content a[data-social="youtube"] ~ .tooltip {
-  background-color: #ff0000;
+.example-2 .icon-content a[data-social="facebook"] .filled,
+.example-2 .icon-content a[data-social="facebook"] ~ .tooltip {
+  background-color: #475fd7;
 }
  
-/* .heroImage img{
-  mix-blend-mode: multiply;
-} */
