--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,83 +1,103 @@
-
-
+* {
+  cursor: none;
+}
 .secondary {
   background: transparent;
   color: #777;
   border: 1px solid #777;
 }
 
-
+.footer-widget {
+  background-color: #152136;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .footer-widget {
-    background-color: #152136;
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
-  @media only screen and (min-width: 768px) and (max-width: 991px) {
-    .footer-widget {
-      padding-top: 100px;
-      padding-bottom: 100px;
-    }
+}
+@media (max-width: 767px) {
+  .footer-widget {
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
-  @media (max-width: 767px) {
-    .footer-widget {
-      padding-top: 80px;
-      padding-bottom: 80px;
-    }
-  }
-  
-  .footer-content p {
-    color: #fff;
-    margin-top: 35px;
-  }
-  .footer-content ul {
-    margin-top: 35px;
-  }
-  .footer-content ul li {
-    display: inline-block;
-    margin: 0 14px;
-  }
-  @media (max-width: 767px) {
-    .footer-content ul li {
-      margin: 0 7px;
-    }
-  }
-  .footer-content ul li a {
-    font-size: 30px;
-    width: 74px;
-    height: 70px;
-    line-height: 74px;
-    text-align: center;
-    border-radius: 50%;
-    color: #bebebe;
-    background-color: #1c2940;
-    -webkit-transition: all 0.3s ease-out 0s;
-    -moz-transition: all 0.3s ease-out 0s;
-    -ms-transition: all 0.3s ease-out 0s;
-    -o-transition: all 0.3s ease-out 0s;
-    transition: all 0.3s ease-out 0s;
-  }
-  @media (max-width: 767px) {
-    .footer-content ul li a {
-      width: 52px;
-      height: 50px;
-      line-height: 50px;
-      font-size: 20px;
-    }
-  }
-  .footer-content ul li a:hover {
-    background-color: #754ef9;
-    color: #fff;
-  }
-  
-  .footer-copyright {
-    background-color: #1c2940;
-  }
-  .footer-copyright .copyright-text p {
-    color: #fff;
-  }
-  
-  .skils-btn:hover{
-    background-color: #2a2828;
-    cursor: pointer;
-    transition: all 0.4s ease 0s;
-  }
+}
 
-  
+.footer-content p {
+  color: #fff;
+  margin-top: 35px;
+}
+.footer-content ul {
+  margin-top: 35px;
+}
+.footer-content ul li {
+  display: inline-block;
+  margin: 0 14px;
+}
+@media (max-width: 767px) {
+  .footer-content ul li {
+    margin: 0 7px;
+  }
+}
+.footer-content ul li a {
+  font-size: 30px;
+  width: 74px;
+  height: 70px;
+  line-height: 74px;
+  text-align: center;
+  border-radius: 50%;
+  color: #bebebe;
+  background-color: #1c2940;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+}
+@media (max-width: 767px) {
+  .footer-content ul li a {
+    width: 52px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 20px;
+  }
+}
+.footer-content ul li a:hover {
+  background-color: #754ef9;
+  color: #fff;
+}
+
+.footer-copyright {
+  background-color: #1c2940;
+}
+.footer-copyright .copyright-text p {
+  color: #fff;
+}
+
+.skils-btn:hover {
+  background-color: #2a2828;
+  cursor: pointer;
+  transition: all 0.4s ease 0s;
+}
+
+.cursor-dot {
+  position: fixed;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+}
+
+.cursor-outline {
+  position: fixed;
+  width: 42px;
+  height: 42px;
+  /* border: 2px solid rgb(0, 0, 0); */
+  border-radius: 50%;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  transition: transform 4s ease-in-out;
+}
